--- a/settings/project.json
+++ b/settings/project.json
@@ -23,7 +23,7 @@
   "group-list": [
     "default"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1653147704619,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
